fixed the overflowing of div when gap property is applied

--- a/style.css
+++ b/style.css
@@ -90,12 +90,32 @@ main{
 .cards{
     display: grid;
     background-color: rgb(241, 205, 205);
-    grid-template-columns: repeat(auto-fill,minmax(200px,1fr));
+    grid-template-columns: repeat(3 ,minmax(100,1fr));
+    grid-template-rows: 0.5fr 5fr 5fr;
+    padding: 10px;
+    gap: 10px;
 }
 
 .announcements{
-    display: grid;
+    display: flex;
+    flex-direction: column;
     background-color: rgb(191, 247, 191);
+}
+
+.announcements>div{
+    border: 1px;    
+    border-color: black;
+    border-style: solid;
+}
+
+.cards>:nth-child(1){
+    grid-area: 1/1/2/4;
+}
+
+.cards>*{
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 1px;
 }
 
 
